--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,29 @@
-# Terraform
-.terraform
+# Local .terraform directories
+**/.terraform/*
+
+# Terraform lockfile
+.terraform.lock.hcl
+
+# .tfstate files
 *.tfstate
-*.tfstate.backup
-*.terraform.lock.hcl
+*.tfstate.*
 
-# Terragrunt
-.terragrunt-cache
+# Crash log files
+crash.log
 
-# OS X
-.history
-.DS_Store
+# Exclude all .tfvars files, which are likely to contain sentitive data, such as
+# password, private keys, and other secrets. These should not be part of version
+# control as they are data points which are potentially sensitive and subject
+# to change depending on the environment.
+*.tfvars
 
-# IntelliJ
-.idea_modules
-*.iml
-*.iws
-*.ipr
-.idea/
-build/
-*/build/
-out/
+# Ignore override files as they are usually used to override resources locally and so
+# are not checked in
+override.tf
+override.tf.json
+*_override.tf
+*_override.tf.json
+
+# Ignore CLI configuration files
+.terraformrc
+terraform.rc
